Import of BOXPHERE/Method-Cached-0.045_1 from CPAN.
gitpan-cpan-distribution: Method-Cached
gitpan-cpan-version:      0.045_1
gitpan-cpan-path:         BOXPHERE/Method-Cached-0.045_1.tar.gz
gitpan-cpan-author:       BOXPHERE
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -19,10 +19,11 @@ requires:
   Attribute::Handlers: 0.79
   Cache::FastMmap: 1.28
   Digest::SHA: 5.47
+  Filter::Util::Call: 0
   JSON::XS: 2.2222
   MIME::Base64: 3.07
   Storable: 2.18
   UNIVERSAL::require: 0.11
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.045_1
