--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,7 @@ author:
 build_requires:
   Test::More: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.79'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,14 +16,15 @@ no_index:
     - inc
     - t
 requires:
-  Attribute::Handlers: 0.79
   Cache::FastMmap: 1.28
   Digest::SHA: 5.47
   Filter::Util::Call: 0
   JSON::XS: 2.2222
   MIME::Base64: 3.07
   Storable: 2.18
+  Sub::Attribute: 0.02
   UNIVERSAL::require: 0.11
+  perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.045_1
+version: 0.05
